--- a/optica.html
+++ b/optica.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <title>Glossário</title>
+    <title>Física Óptica</title>
 </head>
 <body>
     <header>
@@ -24,35 +24,30 @@
         </nav>
     </header>
     <main>
-        <h1>Glossário</h1>
-        <section id="mecanica" class="grupo">
-            <a href="./mecanica.html">Física Mecânica</a>
-            <p>Ela estuda o movimento e o repouso dos corpos 
-                a partir da aplicação ou não de forças sobre eles. 
-                Através do seu estudo, é possível calcularmos a velocidade 
-                dos corpos, o alcance máximo em um lançamento, a aceleração 
-                da gravidade e muitas outras coisas.</p>
-        </section>
-        <section id="termologia" class="grupo">
-            <a href="./termologia.html">Termologia</a>
-                <p>Termologia é o estudo científico dos fenômenos relacionados 
-                    ao calor e à temperatura, como transferência de calor, equilíbrio 
-                    térmico, transformações sofridas por gases, mudanças de estado físico, etc.</p>
-        </section>
+        <h1>Física Óptica</h1>
         <section id="optica" class="grupo">
-            <a href="./optica.html">Física Óptica</a>
-                <p>A Óptica é uma área da Física Clássica que investiga a propagação da luz, 
-                    os tipos de meio em que ela pode se propagar, os tipos de fontes que emitem 
-                    luz, fenômenos ópticos – como reflexão, refração, absorção, dispersão, 
-                    interferência e difração.</p>
+            <p>A Óptica é uma área da Física Clássica que investiga a 
+                propagação da luz, os tipos de meio em que ela pode se 
+                propagar, os tipos de fontes que emitem luz,  fenômenos 
+                ópticos – como reflexão, refração, absorção, dispersão, 
+                interferência e difração.</p>
         </section>
-        <section id="eletro" class="grupo">
-            <a href="./eletro.html">Eletromagnetismo</a>
-                <p>Ela estuda o movimento e o repouso dos corpos a partir da aplicação ou não 
-                    de forças sobre eles. Através do seu estudo, é possível calcularmos a 
-                    velocidade dos corpos, o alcance máximo em um lançamento, a aceleração 
-                    da gravidade e muitas outras coisas.</p>
+        <section id="geometrica" class="grupo">
+            <h2>Óptica Geométrica</h2>
+                <p>A óptica geométrica é a área da Física que estuda o 
+                    comportamento da luz e os fenômenos relacionados a ela. 
+                    Seus estudos estão relacionados, principalmente, às 
+                    formas de propagação da luz, aos tipos de meio de propagação 
+                    da luz, aos tipos de fonte de emissão de luz e a alguns fenômenos 
+                    luminosos, como a refração, reflexão e absorção da luz.</p>
         </section>
+        <section id="fisica" class="grupo">
+            <h2>Óptica Física</h2>
+                <p>A Mecânica Quântica permitiu explicar fenômenos não explicados
+                     pela física clássica, como as órbitas estáveis do elétron 
+                     e a radiação de corpo negro. O foco desse ramo da física 
+                     é o estudo dos sistemas de escala atômica e subatômica, 
+                     como átomos, prótons, elétrons, moléculas, dentre outras partículas</p>
         </section>
     </main>
     <footer>
