--- a/mecanica.html
+++ b/mecanica.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <title>Glossário</title>
+    <title>Física Mecânica</title>
 </head>
 <body>
     <header>
@@ -34,9 +34,10 @@
         </section>
         <section id="classica" class="grupo">
             <h2>Mecânica Clássica</h2>
-                <p>Termologia é o estudo científico dos fenômenos relacionados 
-                    ao calor e à temperatura, como transferência de calor, equilíbrio 
-                    térmico, transformações sofridas por gases, mudanças de estado físico, etc.</p>
+                <p>Mecânica Clássica é uma subárea da Mecânica voltada 
+                    aos estudos dos movimentos dos corpos na Terra e 
+                    imersos em fluidos abaixo da velocidade da luz e 
+                    as causas desses movimentos.</p>
         </section>
         <section id="relativistica" class="grupo">
             <h2>Mecânica Relativística</h2>
