--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
                 Através do seu estudo, é possível calcularmos a velocidade 
                 dos corpos, o alcance máximo em um lançamento, a aceleração 
                 da gravidade e muitas outras coisas.</p>
+                <img src="./img/importancia-mecanica.webp" alt="importancia-mecanica">
         </section>
         <section id="termologia" class="grupo">
             <a href="./termologia.html">Termologia</a>
                 <p>Termologia é o estudo científico dos fenômenos relacionados 
                     ao calor e à temperatura, como transferência de calor, equilíbrio 
                     térmico, transformações sofridas por gases, mudanças de estado físico, etc.</p>
+                    <img src="./img/930bcc707c798b37b2a651eacc5d1d0f.webp" alt="termo">
         </section>
         <section id="optica" class="grupo">
             <a href="./optica.html">Física Óptica</a>
@@ -46,6 +48,7 @@
                     os tipos de meio em que ela pode se propagar, os tipos de fontes que emitem 
                     luz, fenômenos ópticos – como reflexão, refração, absorção, dispersão, 
                     interferência e difração.</p>
+                    <img src="./img/reflexao-refracao-transmissao.webp" alt="optica">
         </section>
         <section id="eletro" class="grupo">
             <a href="./eletro.html">Eletromagnetismo</a>
@@ -53,10 +56,11 @@
                     de forças sobre eles. Através do seu estudo, é possível calcularmos a 
                     velocidade dos corpos, o alcance máximo em um lançamento, a aceleração 
                     da gravidade e muitas outras coisas.</p>
+                    <img src="./img/ondaseletromagneticas-cke.webp" alt="eletro">
         </section>
         </section>
-    </main>
     </div>
+    </main>
     <footer>
         <p>Utilizamos cookies essenciais para proporcionar uma melhor experiência. 
             Ao continuar navegando, você concorda com a nossa Política de privacidade.</p>
