--- a/eletro.html
+++ b/eletro.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <title>Glossário</title>
+    <title>Eletromagnetismo</title>
 </head>
 <body>
     <header>
@@ -24,34 +24,35 @@
         </nav>
     </header>
     <main>
-        <h1>Glossário</h1>
-        <section id="mecanica" class="grupo">
-            <a href="./mecanica.html">Física Mecânica</a>
-            <p>Ela estuda o movimento e o repouso dos corpos 
-                a partir da aplicação ou não de forças sobre eles. 
-                Através do seu estudo, é possível calcularmos a velocidade 
-                dos corpos, o alcance máximo em um lançamento, a aceleração 
-                da gravidade e muitas outras coisas.</p>
-        </section>
-        <section id="termologia" class="grupo">
-            <a href="./termologia.html">Termologia</a>
-                <p>Termologia é o estudo científico dos fenômenos relacionados 
-                    ao calor e à temperatura, como transferência de calor, equilíbrio 
-                    térmico, transformações sofridas por gases, mudanças de estado físico, etc.</p>
-        </section>
-        <section id="optica" class="grupo">
-            <a href="./optica.html">Física Óptica</a>
-                <p>A Óptica é uma área da Física Clássica que investiga a propagação da luz, 
-                    os tipos de meio em que ela pode se propagar, os tipos de fontes que emitem 
-                    luz, fenômenos ópticos – como reflexão, refração, absorção, dispersão, 
-                    interferência e difração.</p>
-        </section>
+        <h1>Eletromagnetismo</h1>
         <section id="eletro" class="grupo">
-            <a href="./eletro.html">Eletromagnetismo</a>
-                <p>Ela estuda o movimento e o repouso dos corpos a partir da aplicação ou não 
-                    de forças sobre eles. Através do seu estudo, é possível calcularmos a 
-                    velocidade dos corpos, o alcance máximo em um lançamento, a aceleração 
-                    da gravidade e muitas outras coisas.</p>
+            <p>O eletromagnetismo é uma das grandes áreas estudadas na Física, 
+                seu objeto de estudo é a conexão entre os fenômenos da eletricidade 
+                e do magnetismo. Seu estudo teve enormes implicações na tecnologia, 
+                já que permitiu o desenvolvimento de motores, baterias, televisores, 
+                celulares, computadores, energia elétrica, internet e muito mais.</p>
+        </section>
+        <section id="fEletro" class="grupo">
+             <h2>Força Elétrica</h2>
+                <p>Força elétrica é força que uma carga elétrica exerce sobre outra. 
+                    Ela é repulsiva para cargas de mesmo sinal e atrativa para cargas 
+                    de sinais opostos. Além disso, é uma grandeza vetorial, proporcional 
+                    ao módulo das cargas e inversamente proporcional à distância que as separa, 
+                    sendo matematicamente descrita pela lei de Coulomb.</p>
+        </section>
+        <section id="cEletro" class="grupo">
+            <h2>Campo Elétrico</h2>
+                <p>Em outras palavras, o campo elétrico mede a influência que uma 
+                    certa carga produz em seus arredores. Quanto mais próximas 
+                    estiverem duas cargas, maior será a força elétrica entre elas 
+                    por causa do módulo do campo elétrico naquela região.</p>
+        </section>
+        <section id="cargaE" class="grupo">
+            <h2>Carga Elétrica</h2>
+                <p>A carga elétrica é uma propriedade das partículas elementares 
+                    que compõem o átomo. Lembrando que o átomo é formado por 
+                    prótons, nêutrons e elétrons, sendo que a carga do próton 
+                    é positiva e a do elétron, negativa.</p>
         </section>
         </section>
     </main>
