--- a/termologia.html
+++ b/termologia.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <title>Glossário</title>
+    <title>Termologia</title>
 </head>
 <body>
     <header>
@@ -24,35 +24,34 @@
         </nav>
     </header>
     <main>
-        <h1>Glossário</h1>
-        <section id="mecanica" class="grupo">
-            <a href="./mecanica.html">Física Mecânica</a>
-            <p>Ela estuda o movimento e o repouso dos corpos 
-                a partir da aplicação ou não de forças sobre eles. 
-                Através do seu estudo, é possível calcularmos a velocidade 
-                dos corpos, o alcance máximo em um lançamento, a aceleração 
-                da gravidade e muitas outras coisas.</p>
+        <h1>Termologia</h1>
+        <section id="termo" class="grupo">
+            <p>Termologia é o estudo científico dos fenômenos relacionados 
+                ao calor e à temperatura, como transferência de calor, 
+                equilíbrio térmico, transformações sofridas por gases, 
+                mudanças de estado físico, etc.</p>
         </section>
-        <section id="termologia" class="grupo">
-            <a href="./termologia.html">Termologia</a>
-                <p>Termologia é o estudo científico dos fenômenos relacionados 
-                    ao calor e à temperatura, como transferência de calor, equilíbrio 
-                    térmico, transformações sofridas por gases, mudanças de estado físico, etc.</p>
+        <section id="lei1" class="grupo">
+            <h2>Primeira Lei da Termodinâmica</h2>
+                <p>A Primeira Lei da Termodinâmica se relaciona com o
+                    princípio da conservação da energia. Isso quer dizer 
+                    que a energia em um sistema não pode ser destruída nem 
+                    criada, somente transformada.</p>
         </section>
-        <section id="optica" class="grupo">
-            <a href="./optica.html">Física Óptica</a>
-                <p>A Óptica é uma área da Física Clássica que investiga a propagação da luz, 
-                    os tipos de meio em que ela pode se propagar, os tipos de fontes que emitem 
-                    luz, fenômenos ópticos – como reflexão, refração, absorção, dispersão, 
-                    interferência e difração.</p>
+        <section id="lei2" class="grupo">
+            <h2>Segunda Lei da Termodinâmica</h2>
+                <p>Desse modo, pela Segunda Lei da Termodinâmica não é 
+                    possível que o calor se converta integralmente em 
+                    outra forma de energia. Por esse motivo, o calor é 
+                    considerado uma forma degradada de energia.</p>
         </section>
-        <section id="eletro" class="grupo">
-            <a href="./eletro.html">Eletromagnetismo</a>
-                <p>Ela estuda o movimento e o repouso dos corpos a partir da aplicação ou não 
-                    de forças sobre eles. Através do seu estudo, é possível calcularmos a 
-                    velocidade dos corpos, o alcance máximo em um lançamento, a aceleração 
-                    da gravidade e muitas outras coisas.</p>
-        </section>
+        <section id="lei0" class="grupo">
+            <h2>Lei Zero da Termodinâmica</h2>
+                <p>A Lei Zero da Termodinâmica trata das condições para 
+                    a obtenção do equilíbrio térmico. Dentre essas 
+                    condições podemos citar a influência dos materiais 
+                    que tornam a condutividade térmica maior ou menor.
+                </p>
         </section>
     </main>
     <footer>
