--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#home">Dicas de estudo</a></li>
                 <li><a href="#home">Glossário</a></li>
                 <li><a href="#home">Biblioteca</a></li>
-                <li><a href="#home">Feedback</a></li>
+                <li><a href="./feedback.html">Feedback</a></li>
             </ul>
         </nav>
     </header>
@@ -62,8 +62,8 @@
     </div>
     </main>
     <footer>
-        <p>Utilizamos cookies essenciais para proporcionar uma melhor experiência. 
-            Ao continuar navegando, você concorda com a nossa Política de privacidade.</p>
+        <p>Utilizamos cookies essenciais para proporcionar uma melhor experiência. Ao continuar navegando, você concorda com a nossa <a href="#">Política de Privacidade</a>.</p>
+        <button>OK</button>
     </footer>
 </body>
 </html> 
