--- a/termologia.html
+++ b/termologia.html
@@ -55,8 +55,8 @@
         </section>
     </main>
     <footer>
-        <p>Utilizamos cookies essenciais para proporcionar uma melhor experiência. 
-            Ao continuar navegando, você concorda com a nossa Política de privacidade.</p>
+        <p>Utilizamos cookies essenciais para proporcionar uma melhor experiência. Ao continuar navegando, você concorda com a nossa <a href="#">Política de Privacidade</a>.</p>
+        <button>OK</button>
     </footer>
 </body>
 </html> 
